--- a/Code/Ammann-Beenker/AB_BLT_search_different_flux/Dynamics_of_flux_025/Dynamics_script.ipynb
+++ b/Code/Ammann-Beenker/AB_BLT_search_different_flux/Dynamics_of_flux_025/Dynamics_script.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -597,7 +597,7 @@
        "'## Magic line for animation\\n%matplotlib inline\\n# Attempt at animating time evolution\\n\\nall_vals_select = [Hamil_solve_perturb(grid_scaled, jump_scaled, (B_scale)*B_full, x*perturbs) for x in select_Vs]\\n\\nall_evals_select = [x for x,y in all_vals_select]\\nall_evecs_select = [y for x,y in all_vals_select]\\n\\nfor vs, evecs, evals in zip(select_Vs, all_evecs_select, all_evals_select):\\n    # Set figure up first\\n    fig, ax = plt.subplots(figsize=(6,6))\\n    # Set bascis\\n    sites = ax.scatter(x=[], y=[], c=[])\\n\\n    xs = [w[0] for w in grid_scaled]\\n    ys = [w[1] for w in grid_scaled]\\n\\n\\n    # Set timesteps, state of choice for animation, and number of frames\\n    timestep = 3\\n    n_frames = 150\\n    coefs = [1,1]\\n\\n    psi_0, dos_0 = time_evolve_evec(target_group, coefs, 0, pure_evecs, pure_evals)\\n\\n    dos_max = max(dos_0)\\n\\n    plt.set_cmap(\\'hot_r\\')\\n\\n    # This function will do the animating\\n    def update(i):\\n        plt.clf()\\n        # t is the steps we progress, timestep sets the steplength\\n        t = i * timestep\\n\\n        # Using the time evolution to find density of states for each increment\\n        psi, dos = time_evolve_evec(target_group, coefs, t, evecs, evals)\\n        cf = plt.scatter(x= xs, y= ys, c= dos, vmin=0, vmax= dos_max)\\n        plt.plot([],[], linestyle= \\'\\', label= r\\'Scaling of $\\x07lpha = {}$\\'.format(vs))\\n        plt.title(f\\'Timestep= {timestep} and Frames= {n_frames}\\')\\n        plt.legend(loc= 3)\\n        plt.colorbar(cf)\\n        plt.axis(\\'equal\\')\\n\\n\\n    anim = FuncAnimation(fig, update, frames= n_frames, interval=250)\\n\\n    name_perturb_temp = str(vs)\\n    name_perturb = name_perturb_temp.replace(\".\", \"_\")\\n    empty = \\'_\\'\\n    name_file = empty.join([str(x) for x in target_group])\\n\\n    anim.save(f\\'es_time_evolve/{name_file}/Scale_{name_perturb}.gif\\', writer=\\'imagemagick\\', fps=24)\\n\\n    #anim'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -663,64 +663,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "target_group = [629, 631]\n",
-    "select_Vs = [0]\n",
-    "times = [np.arange(0, 30, 10)]\n",
-    "for v, time in zip(select_Vs, times):\n",
+    "target_group = [549, 550]\n",
+    "for t in np.arange(0,15,5):\n",
+    "    # Set figure up first\n",
+    "    fig, ax = plt.subplots(figsize=(6,6))\n",
     "\n",
-    "    fig, ax = plt.subplots(1, len(time) + 1, figsize=(12, 4), gridspec_kw={\"width_ratios\":[0.33, 0.33, 0.33, 0.03]})\n",
-    "    \n",
-    "    for z, t in enumerate(time):\n",
-    "        # Plot all possible paths between vertices\n",
-    "        for i,j in zip(grid_scaled, jump_scaled):\n",
-    "            xs = [w[0] for w in j]\n",
-    "            ys = [w[1] for w in j]\n",
-    "            for l,k in zip(xs,ys):\n",
-    "                ax[z].plot([i[0], l], [i[1], k], color= 'k', zorder= 1, linewidth= 0.5)\n",
+    "    # Plot all possible paths between vertices\n",
+    "    for i,j in zip(grid_scaled, jump_scaled):\n",
+    "        xs = [w[0] for w in j]\n",
+    "        ys = [w[1] for w in j]\n",
+    "        for l,k in zip(xs,ys):\n",
+    "            ax.plot([i[0], l], [i[1], k], color= 'k', zorder= 1, linewidth= 0.5)\n",
     "\n",
-    "        # Get points for scatter plot\n",
-    "        xs = [w[0] for w in grid_scaled]\n",
-    "        ys = [w[1] for w in grid_scaled]\n",
+    "    # Get points for scatter plot\n",
+    "    xs = [w[0] for w in grid_scaled]\n",
+    "    ys = [w[1] for w in grid_scaled]\n",
     "\n",
-    "        # Time evolution segment\n",
-    "        coefs = [1,1]\n",
-    "        # Initial setup\n",
-    "        psi_0, dos_0 = time_evolve_evec(target_group, coefs, 0, pure_evecs, pure_evals)\n",
-    "        dos_max = max(dos_0)\n",
+    "    # Time evolution segment\n",
+    "    coefs = [1,1]\n",
+    "    # Initial setup\n",
+    "    psi_0, dos_0 = time_evolve_evec(target_group, coefs, 0, pure_evecs, pure_evals)\n",
+    "    dos_max = max(dos_0)\n",
     "\n",
-    "        # Actual evolution\n",
-    "        tim = t\n",
-    "        psi, dos = time_evolve_evec(target_group, coefs, tim, all_evecs[int(v * 10)], all_evals[int(v * 10)])\n",
+    "    # Actual evolution\n",
+    "    time = t\n",
+    "    psi, dos = time_evolve_evec(target_group, coefs, time, pure_evecs, pure_evals)\n",
     "\n",
-    "        # Plotting part\n",
-    "        cax = ax[z].scatter(x= xs, y= ys, c= dos, vmin=0, vmax= dos_max)\n",
-    "        ax[z].set_xticks([])\n",
-    "        ax[z].set_yticks([])\n",
-    "        ax[z].axis('equal')\n",
-    "\n",
-    "    end_ax = len(time) -1\n",
-    "    cb = fig.colorbar(cax, cax=ax[len(time)], orientation='vertical')\n",
+    "    # Plotting part\n",
+    "    cf = plt.scatter(x= xs, y= ys, c= dos, vmin=0, vmax= dos_max)\n",
+    "    plt.colorbar(cf)\n",
+    "    plt.axis('equal')\n",
+    "    plt.xticks([])\n",
+    "    plt.yticks([])\n",
     "\n",
     "    name_temp = str(t)\n",
     "    name = name_temp.replace(\".\", \"_\")\n",
     "\n",
-    "    v_name_temp = str(v)\n",
-    "    v_name = v_name_temp.replace(\".\", \"_\")\n",
-    "\n",
-    "    empty = '_'\n",
-    "    name_file = empty.join([str(x) for x in target_group])\n",
     "    plt.set_cmap('hot_r')\n",
-    "    plt.savefig(f'es_time_evolve/{name_file}/TE_frames/V_{v_name}.png', bbox_inches= 'tight')\n",
+    "    plt.savefig(f'es_time_evolve/pure_time_{name}.png', bbox_inches= 'tight')\n",
     "    plt.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -729,7 +719,7 @@
        "\"## Magic line for animation\\n%matplotlib inline\\n# Attempt at animating time evolution\\n\\n# Set figure up first\\nfig, ax = plt.subplots(figsize=(6,6))\\n# Set bascis\\nsites = ax.scatter(x=[], y=[], c=[])\\n\\nxs = [w[0] for w in grid_scaled]\\nys = [w[1] for w in grid_scaled]\\n\\n\\n# Set timesteps, state of choice for animation, and number of frames\\ntimestep = 1\\nn_frames = 150\\ncoefs = [1,1]\\n\\npsi_0, dos_0 = time_evolve_evec(group, coefs, 0, pure_evecs, pure_evals)\\n\\ndos_max = max(dos_0)\\n\\nplt.set_cmap('hot_r')\\n\\n# This function will do the animating\\ndef update(i):\\n    plt.clf()\\n    # t is the steps we progress, timestep sets the steplength\\n    t = i * timestep\\n\\n    # Using the time evolution to find density of states for each increment\\n    psi, dos = time_evolve_evec(group, coefs, t, evecs, evals)\\n    cf = plt.scatter(x= xs, y= ys, c= dos, vmin=0, vmax= dos_max)\\n    plt.title(f'Timestep= {timestep} and Frames= {n_frames}')\\n    plt.colorbar(cf)\\n    plt.axis('equal')\\n\\n\\nanim = FuncAnimation(fig, update, frames= n_frames, interval=250)\\n\\nanim.save(f'test_dyn.gif', writer='imagemagick', fps=24)\\n\\n#anim\""
       ]
      },
-     "execution_count": 20,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
